--- a/addressbook-web-test/addressbook-web-test/packages.config
+++ b/addressbook-web-test/addressbook-web-test/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net452" />
+  <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="91.0.4472.10100" targetFramework="net452" />
 </packages>
